--- a/index.qmd
+++ b/index.qmd
@@ -66,6 +66,7 @@ lnes <- as.lines(vect(rbind(c(3,4.6), c(3.2,4), c(3.5,3.8)))) |>
 lux <- vect(system.file("ex/lux.shp", package = "terra"))
 
 par(mfrow = c(1,3))
+par(mar = rep(0.1,4))
 
 plot(pts, axes = F, main = "Points")
 plot(lnes, col = "blue", axes = F, main = "Lines")
@@ -82,7 +83,8 @@ Here is an example of raster data, where each cell in the raster represents elev
 ```{r}
 #| code-fold: true
 
-par(mfrow = c(1,1))
+par(mfrow = c(1,1)) #return to defaults
+par(mar = c(5, 4, 4, 2) + 0.1)
 
 elev <- system.file("ex/elev.tif", package = "terra") |>
   rast() |>
@@ -571,6 +573,9 @@ The nice thing about projecting vector data is that the values stay the same. So
 
 We've been working with just one raster, but what if we want to do the same thing to many rasters at the same time?
 
+
+## Nice maps
+Brief sections for base, tmap and ggplot?
 
 ### Saving
 
